--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/ccoltrera/vote_tracker#readme",
   "engines": {
-    "node": "0.10.x"
+    "node": "0.12.4"
   },
   "dependencies": {
     "express": "^4.12.4"
